<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    tools:context=".SignInActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/signInBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="170dp"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/imageContainer"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/signInBar"
        app:layout_constraintLeft_toLeftOf="@id/rootLayout"
        app:layout_constraintRight_toRightOf="@id/rootLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sign_in_photo"
            android:scaleType="fitXY"
            android:contentDescription="Sign In Image" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFieldBox"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:paddingRight="21dp"
        android:paddingLeft="21dp"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        app:layout_constraintRight_toRightOf="@id/rootLayout"
        app:layout_constraintLeft_toLeftOf="@id/rootLayout"
        android:layout_marginTop="70dp"
        android:paddingEnd="21dp">


        <TextView
            android:id="@+id/loginEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/email_label"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            app:layout_constraintTop_toTopOf="@id/loginFieldBox" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/loginFieldBox"
            app:layout_constraintTop_toTopOf="@id/loginFieldBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/email_hint"
                android:textCursorDrawable="@android:color/transparent"
                android:gravity="end" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/loginDiv"
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            app:layout_constraintRight_toRightOf="@id/loginFieldBox"
            app:layout_constraintTop_toBottomOf="@id/loginEmailInputLayout"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/loginPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/password_label"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            app:layout_constraintTop_toBottomOf="@id/loginDiv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordInputLayout"
            android:layout_width="250dp"
            android:layout_height="25dp"
            app:hintEnabled="false"
            app:layout_constraintRight_toRightOf="@id/loginFieldBox"
            app:layout_constraintTop_toBottomOf="@id/loginDiv"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="26dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:gravity="end"
                android:textCursorDrawable="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="330dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordInputLayout"
            app:layout_constraintRight_toRightOf="@id/loginFieldBox"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            android:text="Sign In"
            android:textAllCaps="true"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#ffffff"
            android:background="@drawable/btn_rounded"
            android:layout_marginTop="50dp"/>
        
        <TextView
            android:id="@+id/forgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/loginFieldBox"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            android:text="@string/forgot_password"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="1dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookLogin"
            app:layout_constraintTop_toBottomOf="@id/forgotText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            app:layout_constraintTop_toBottomOf="@id/forgotText"
            app:layout_constraintLeft_toRightOf="@id/facebookLogin"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>